WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135447
Default buttons do not pulse in OS X 10.10
https://bugs.webkit.org/show_bug.cgi?id=135447
Summary
Default buttons do not pulse in OS X 10.10
Dean Jackson
Reported
2014-07-30 18:25:03 PDT
Default buttons do not pulse in OS X 10.10
Attachments
Patch
(4.94 KB, patch)
2014-07-30 18:58 PDT
,
Dean Jackson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-07-30 18:25:55 PDT
OS X Yosemite does not need a redraw timer on RenderButton, since the default blue button for forms doesn't pulse in the manner of previous releases.
Dean Jackson
Comment 2
2014-07-30 18:58:31 PDT
Created
attachment 235797
[details]
Patch
mitz
Comment 3
2014-07-30 19:01:40 PDT
Comment on
attachment 235797
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235797&action=review
> Source/WebCore/rendering/RenderThemeMac.mm:2033 > +#if __MAC_OS_X_VERSION_MIN_REQUIRED < 101000 > + return true; > +#else > + return false; > +#endif
We usually put the “present and future” case before the “legacy” case.
Dean Jackson
Comment 4
2014-07-30 19:17:06 PDT
<
rdar://problem/17577321
>
Dean Jackson
Comment 5
2014-07-31 15:08:26 PDT
Committed
r171890
: <
http://trac.webkit.org/changeset/171890
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug