Default buttons do not pulse in OS X 10.10 https://bugs.webkit.org/show_bug.cgi?id=135447 <rdar://problem/17875896>

Reviewed by Dan Bernstein.

OS X Yosemite does not have the animated pulsing default
buttons seen in previous releases. We don't need to have
a timer in RenderButton constantly triggering repaints.

* platform/mac/ThemeMac.mm:
(WebCore::paintButton): No need to advance the animation.
* rendering/RenderButton.cpp:
(WebCore::RenderButton::styleDidChange): Ask the theme if it
should advance the animation.
* rendering/RenderTheme.h:
(WebCore::RenderTheme::defaultButtonHasAnimation): Virtual function
indicating if the button needs to repaint.
* rendering/RenderThemeMac.h:
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::defaultButtonHasAnimation): Provide platform
specific result on Yosemite and above.

Canonical link: https://commits.webkit.org/153356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171890 268f45cc-cd09-0410-ab3c-d52691b4dbfc